﻿- Fix for author RICO settings files with _Data postfix but no package prefix


Version 2.3.1

- RICO ploppable complaints checkboxes now set when 'All RICO' checkboxes are set
- Clarify text labels for growable options
- Adjust thumbnail rendering angle
- Cleanup legacy code remnants


Version 2.3

- Add 'Instant plopping' option for growables
- Add 'Disable zone check' option for growables
- Add 'Disable district specialization check' option for growables
- Add 'Ignore low land value complaint' option
- Add 'Ignore too few services complaint' option
- Add 'Make plopped buildings historical' option
- Current building selection (if any) is now pre-selected when opening settings panel
- Double-clicking on a building button directly opens settings panel for that building
- Building icons in ploppable panel now sorted by display name
- Transition to on-demand thumbnail generation
- Add submesh and sub-building rendering to preview images
- Tweak thumbnail lighting and angles slightly
- Fix building selection not updating when info panel button pressed
- Add BuildingLoaded Harmony Postfix patch to attempt to catch and reset and RICO residentials with zero CitizenUnits
- Stop attempting to remove existing (non-RICO) building UI buttons on game load
- Remove existing (non-RICO) building UI buttons (if any) when settings are applied live
- Add de, es, fr, jp, ru, tr, pl translations


Version 2.2.3

- Add additional public method calls for interfacing with other mods
- Move all inter-mod public methods to new Interfaces class
- Update translation framework
- Overhaul XML settings file handling


Version 2.2.2

- Add manual translation selection option
- Update translation framework to latest version with improved fallback language detection
- Allow for longer translation strings in dropdown menu widths
- Overhaul thumbnail background option choices; now a dropdown (color, plain, skybox)
- Memory management: delay generating thumbnails until actually in-game